force-app/main/default/objects/WorkType/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Developer-name identifier for this WorkType, used by NepaLayerDisciplineResolver to look up the correct WorkType record from NEPA_Layer_Discipline__mdt.Work_Type_Developer_Name__c.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>