force-app/main/default/objects/WorkType/fields/nepa_survey_window_end__c.field-meta.xml
<CustomField>
    <fullName>nepa_survey_window_end__c</fullName>
    <description>Latest calendar date by which a Visit of this work type should be scheduled. Used to enforce seasonal survey windows (e.g., sage-grouse lek surveys must complete by April 30; botanical surveys must fall within June–August). Leave blank for work types with no seasonal constraint.</description>
    <inlineHelpText>Seasonal window close date. Visits should not be scheduled after this date for this work type.</inlineHelpText>
    <label>Survey Window End</label>
    <type>Date</type>
</CustomField>