force-app/main/default/objects/WorkType/fields/Survey_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Survey_Window_Start__c</fullName>
    <label>Survey Window Start</label>
    <type>Date</type>
    <description>Earliest date the field survey associated with this visit type may begin. Used to set Visit.PlannedVisitStartTime during auto-assembly.</description>
    <inlineHelpText>The earliest date this type of field survey can start (e.g., after spring thaw for wetland delineation).</inlineHelpText>
</CustomField>